--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "font-awesome": "^4.7.0",
     "i18next": "^23.12.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.52.1",
     "react-i18next": "^14.1.3",
     "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.24.1",
     "swiper": "^11.1.5",
     "yup": "^1.4.0"
